# library-db-app

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: use_cases.md
docs/diagrams/: Context.drawio  use_cases.drawio
docs/report/: REPORT.md  SQL_QUERIES.md
docs/report/diagrams/: IDEF0_A0_Context.drawio  IDEF0_A0_Decomposition.drawio
src/app/: __init__.py  data.py  export_reports.py  main.py  repository.py  routes.py
src/app/csv/: authors.csv  books.csv  categories.csv  employees.csv  loans.csv  positions.csv  publishers.csv  readers.csv
src/app/routes/: __init__.py  admin.py  auth.py  librarian.py  public.py  reader.py
src/app/static/css/: style.css
src/app/static/js/: main.js
src/app/templates/: _nav_admin.html  _nav_librarian.html  _nav_public.html  _nav_reader.html  _report_export.html  add_book.html  add_reader.html  admin_add_employee.html  admin_dashboard.html  admin_employees.html  admin_settings.html  base.html  books.html  index.html  issue_book.html  librarian_add_reader.html  librarian_books.html  librarian_dashboard.html  librarian_issue.html  librarian_loans.html  librarian_overdue.html  librarian_readers.html  librarian_report_active.html  librarian_report_loans.html  librarian_stats.html  loans.html  login.html  overdue.html  reader_dashboard.html  readers.html  search.html
tests/: conftest.py  test_auth.py  test_librarian.py  test_public.py  test_reader.py
