[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "library-db-app"
version = "0.1.0"
description = "Web application for library management system"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "fpdf2>=2.7",
    "library-db-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
app = ["csv/*.csv"] 